--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,22 +39,17 @@ dependencies:
   bloc: ^8.1.4
   equatable: ^2.0.5
   image_picker: ^1.1.0
+  video_player: ^2.8.6
+  video_thumbnail: ^0.5.3
+  audioplayers: ^6.0.0
+  file_picker: ^8.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
 
   # The following line ensures that the Material Icons font is
